# willowly_group

./: .gitignore
.github/workflows/: user-microservice-test.yml
data/chroma_db/: chroma.sqlite3
data/raw/txts/: txt0.txt
ingestion-microservice/: .gitignore  README.md  config.py  embeddings.py  requirements.txt
ingestion-microservice/scripts/: ingest.py  utils.py
rag-microservice/: .dockerignore  .env.prod.example  .env.test.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
rag-microservice/app/: auth.py  config.py  logger.py  main.py  middleware.py  monitoring.py  routes.py  schemas.py
rag-microservice/core/: generator.py  retriever.py
rag-microservice/tests/: __init__.py  conftest.py  test_auth.py  test_generator.py  test_improvements.py  test_retriever.py  test_routes.py
user-microservice/: .dockerignore  .env.prod.example  .env.test.example  .gitignore  Dockerfile  Makefile  None  README.md  alembic.ini  docker-compose.yml  prometheus.yml  pyproject.toml
user-microservice/.github/workflows/: test.yml
user-microservice/alembic/: env.py
user-microservice/alembic/versions/: 001_initial_users_table.py
user-microservice/app/: auth.py  cache.py  config.py  crud.py  db.py  dependencies.py  logger.py  main.py  middleware.py  models.py  monitoring.py  routes.py  schemas.py  services.py  utils.py
user-microservice/docker/: init-test-db.sh
user-microservice/tests/: conftest.py  test_api.py  test_cache.py  test_crud.py  test_db_resilience.py  test_graceful_shutdown.py  test_metrics.py  test_security.py  test_services.py  test_utils.py
